--- a/aplicacionTurnos/templates/aplicacionTurnos/home.html
+++ b/aplicacionTurnos/templates/aplicacionTurnos/home.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <meta charset='utf-8'/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
     <!---Bootstrap and custom styles--->
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/footer.css"/>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/header-user-dropdown.css">
+    <link href='http://fonts.googleapis.com/css?family=Cookie|Itim' rel='stylesheet' type='text/css'>
     <!---Estilos Calendario--->
     <link href='../static/css/fullcalendar.css' rel='stylesheet'/>
     <link href='../static/css/fullcalendar.print.css' rel='stylesheet' media='print'/>
@@ -18,6 +22,8 @@
     <script src='../static/js/es.js'></script>
     <!---Script librerias externas--->
     <script src="/static/js/bootstrap.min.js"></script>
+
+    <title>Sitema Turnos</title>
 
     <!---Inicio Script calendario (SACAR)--->
     <script>
@@ -37,6 +43,23 @@
     </script>
     <!---Fin Script calendario (SACAR)--->
     <body>
+      <header class="header-user-dropdown">
+
+      	<div class="header-limiter">
+      		<h1>Dental<span>Clinic</span></h1>
+
+      		<div class="header-user-menu">
+      			<img src="/static/imagenes/Doctor.png" alt="User Image"/>
+
+      			<ul>
+      				<li><a href="#">Settings</a></li>
+      				<li><a href="/logout" class="highlight">Logout</a></li>
+      			</ul>
+      		</div>
+      	</div>
+      </header>
+
+
       <div id='general'>
         <div id='contenedorPrincipal'>
           <div id='contenedorPrimarioIzquierda'>
@@ -58,25 +81,11 @@
                 <div id="demo">{{today}}</div>
               </div>
 
-              <!--
-              <div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Medicos
-                <span class="caret"></span>
-               </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                  {% for medico in medicos %}
-                  <li><a href="#">{{medico}}</a></li>
-                  {% endfor %}
-                </ul>
-              </div>
-            -->
             </div>
           </div>
           <div id='dia'>
-             <a href="/logout"><button type="button" class="pull-right btn btn-info btn-sm">Desconectar</button></a>
             {% block tablas %}
-            <table class="table table-hover">
+            <table id="table" class="table table-hover">
               <font size=5><p align=center>Turnos</p></font>
               <tr>
                 <td class="warning">Medico</td>
@@ -104,33 +113,31 @@
           <!--Boton Para Nuevo Medico y Tabla de Medicos-->
            <div class="col-sm-3 what-we-do-box">
              <div class="what-we-do-box-icon">
-               <a class="btn" href="{%url 'aplicacionTurnos.views.nuevoMedico'%}">
+               <a class="btn btn-ttc" href="{%url 'aplicacionTurnos.views.nuevoMedico'%}">
                  <i class="fa fa-user-md fa-4x"></i></a></div>
                 <h3>Medico</h3>
-                <p>Crear Nuevo Medico</p>
-                <p>y ver los medicos registrados</p>
+                <p>Agregar y Administrar Medicos</p>
              </div>
              <!--Boton para Nuevo Paciente y Tabla de Pacientes-->
              <div class="col-sm-3 what-we-do-box">
              <div class="what-we-do-box-icon">
-               <a class="btn" href="{% url 'aplicacionTurnos.views.nuevoPaciente' %}">
+               <a class="btn btn-ttc" href="{% url 'aplicacionTurnos.views.nuevoPaciente' %}">
                  <i class="fa fa-user fa-4x"></i></a></div>
                  <h3>Paciente</h3>
-                 <p>Crear nuevos pacientes</p>
-                 <p>y ver los ya ingresados</p>
+                 <p>Agregar y Administrar Pacientes</p>
              </div>
              <!--Boton para nuevo turno-->
              <div class="col-sm-3 what-we-do-box">
              <div class="what-we-do-box-icon">
-               <a class="btn" href="{%url 'aplicacionTurnos.views.nuevoTurno'%}">
+               <a class="btn btn-ttc" href="{%url 'aplicacionTurnos.views.nuevoTurno'%}">
                  <i class="fa fa-plus-square fa-4x"></i></a></div>
                  <h3>Nuevo Turno</h3>
-                 <p>Crear Nuevos Turnos</p>
+                 <p>Agregar y Administrar Turnos</p>
              </div>
              <!--Boton para Auxiliares-->
              <div class="col-sm-3 what-we-do-box">
              <div class="what-we-do-box-icon">
-               <div class="btn-group ">
+               <div class="btn-group btn-ttc ">
                  <button type="button" class="btn dropup-toggle boton-trans" data-toggle="dropdown">
                    <i class="fa fa-list-alt fa-4x"></i></a>
                    <span class="caret"></span>
@@ -143,8 +150,7 @@
                </div>
              </div>
              <h3>Auxiliares</h3>
-             <p> Agregar obra social,</p>
-             <p>tratamientos y especializaciones</p>
+             <p>Crear y Administrar Turnos</p>
            </div>
         </div>
       </div>
