--- a/aplicacionTurnos/templates/aplicacionTurnos/nuevoMedico.html
+++ b/aplicacionTurnos/templates/aplicacionTurnos/nuevoMedico.html
@@ -2,9 +2,8 @@
 {% load widget_tweaks %}
 {% load bootstrap %}
 
-<<<<<<< HEAD
         {% block ABM %}
-            <h2>Medico</h2>
+            <p>Medico</p>
             <form method="POST">
               {% csrf_token %}
               {% form_input form.nombre %}
@@ -19,24 +18,6 @@
               </div>
             </form>
             {% endblock%}
-=======
-      {% block ABM %}
-        <h3>Medico</h3>
-        <form method="POST" class="form-horizontal" >
-          {% csrf_token %}
-          {% form_input medicoForm.nombre %}
-          {% form_input medicoForm.apellido %}
-          {% form_input medicoForm.dni %}
-          {% form_input medicoForm.telefono %}
-          {% form_input medicoForm.correo %}
-          {% form_input medicoForm.especialidad %}
-          {% form_input medicoForm.horario %}
-          <div class="pull-right">
-            <input type="submit" class="btn btn-success" value="Guardar"/>
-          </div>
-        </form>
-        {% endblock%}
->>>>>>> 09fa0cbb645e2337055e3dfa6e8fe974e23424e6
 
     {% block tablas %}
     <table class="table table-hover">
@@ -62,11 +43,6 @@
           <td class="success"><a href="{% url 'aplicacionTurnos.views.editarMedico' pk=medico.pk %}"><i class="fa fa-pencil fa-2x" aria-hidden="true"></i></a></td>
           <td class="success"><a href="{% url 'aplicacionTurnos.views.eliminarMedico' pk=medico.pk %}"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a></td>
         </tr>
-<<<<<<< HEAD
       {% endfor %}
         </table>
-=======
-      </table>
-      {% endfor %}
->>>>>>> 09fa0cbb645e2337055e3dfa6e8fe974e23424e6
       {% endblock %}
