cambios colores estados

--- a/aplicacionTurnos/static/css/header-user-dropdown.css
+++ b/aplicacionTurnos/static/css/header-user-dropdown.css
@@ -74,7 +74,7 @@
 .header-user-dropdown .header-limiter .header-user-menu{
 	position: relative;
 	float:right;
-	background-color:#3a3c3e;
+	background-color:#292c2f;
 	width:70px;
 	height:45px;
 	border-radius:2px;
