--- a/aplicacionTurnos/templates/aplicacionTurnos/home.html
+++ b/aplicacionTurnos/templates/aplicacionTurnos/home.html
@@ -23,7 +23,7 @@
     <!---Script librerias externas--->
     <script src="/static/js/bootstrap.min.js"></script>
 
-    <title>Sitema Turnos</title>
+    <title>Dental Clinic</title>
 
     <!---Inicio Script calendario (SACAR)--->
     <script>
@@ -95,14 +95,14 @@
                 <td class="warning">Estado</td>
               </tr>
               {% for turno in turnos %}
-              <tr>
-                  <td class="success">{{turno.medico}}</td>
-                  <td class="success">{{turno.paciente}}</td>
-                  <td class="success">{{turno.horario}}</td>
-                  <td class="success">{{turno.estado}}</td>
-                  <td class="success">{{turno.tratamiento}}
-                  <td class="success"><a href="{% url 'aplicacionTurnos.views.editarTurno' pk=turno.pk %}"><i class="fa fa-pencil fa-2x" aria-hidden="true"></i></a></td>
-                  <td class="success"><a href="{% url 'aplicacionTurnos.views.eliminarTurno' pk=turno.pk %}"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a></td>
+              <tr class="{{turno.estado}}">
+                  <td>{{turno.medico.nombre}} {{turno.medico.apellido}}</td>
+                  <td>{{turno.paciente.nombre}} {{turno.paciente.apellido}}</td>
+                  <td>{{turno.horario.horaInicio}}</td>
+                  <td>{{turno.tratamiento.nombre}}</td>
+                  <td>{{turno.estado}}</td>
+                  <td><a href="{% url 'aplicacionTurnos.views.editarTurno' pk=turno.pk %}"><i class="fa fa-pencil fa-2x" aria-hidden="true"></i></a></td>
+                  <td><a href="{% url 'aplicacionTurnos.views.eliminarTurno' pk=turno.pk %}"><i class="fa fa-trash fa-2x" aria-hidden="true"></i></a></td>
                 </tr>
               {% endfor %}
             </table>
