--- a/aplicacionTurnos/templates/aplicacionTurnos/nuevoTurno.html
+++ b/aplicacionTurnos/templates/aplicacionTurnos/nuevoTurno.html
@@ -10,6 +10,7 @@
               {% form_input form.paciente %}
               {% form_input form.horario %}
               {% form_input form.tratamiento %}
+              {{ form.estado }}
               <div class="pull-right">
                 <input type="submit" class="btn btn-success" value="Guardar"/>
               </div>
